Readme, package.json and exchangeRate response updates

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     {
       "name": "Arjun",
       "email": "arjun@getsafle.com"
+    },
+    {
+      "name": "Suraj",
+      "email": "surajsingla333@gmail.com"
     }
   ],
   "license": "ISC",
