--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getsafle/1inch-controller",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "1inch controller for safle token swaps",
   "main": "src/index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/getsafle/1inch-controller#readme",
   "dependencies": {
     "axios": "^0.25.0",
-    "web3-utils": "^1.7.0"
+    "ethers": "^5.6.8",
+    "web3-utils": "^1.7.3"
   }
 }
