--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getsafle/1inch-controller",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "1inch controller for safle token swaps",
   "main": "src/index.js",
   "scripts": {
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/getsafle/1inch-controller#readme",
   "dependencies": {
+    "@getsafle/safle-token-lists": "^1.0.1",
     "axios": "^0.25.0",
     "ethers": "^5.6.8",
     "web3-utils": "^1.7.3"
