--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getsafle/1inch-controller",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "1inch controller for safle token swaps",
   "main": "src/index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "@getsafle/safle-token-lists": "^1.0.1",
     "axios": "^0.25.0",
     "ethers": "^5.6.8",
+    "web3": "^1.8.1",
     "web3-utils": "^1.7.3"
   }
 }
